--- a/SQL/docker-compose.yml
+++ b/SQL/docker-compose.yml
@@ -10,7 +10,5 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
     volumes:
-      - mysql_data:/var/lib/mysql
+      - ./mysql_data:/var/lib/mysql
 
-volumes:
-  mysql_data:
